plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

repositories {
    mavenCentral()
}

ext {
    javaFxVersion = '22.0.1'
}

dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.2'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.17.2'
}

javafx {
    version = javaFxVersion
    modules = [
        'javafx.controls',
        'javafx.fxml'
    ]
}

application {
    mainClass = 'app.MainApp'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

run {
    // Necesario para JavaFX en algunos entornos
    jvmArgs = [
        '--add-modules', 'javafx.controls,javafx.fxml'
    ]
}
